[package]
name = "iapping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-lc-rs = "1.16.2"
axum = "0.8.8"
base64 = "0.22.1"
hyper = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
