[package]
name = "iapping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-lc-rs = "1.16.2"
axum = "0.8.8"
base64 = "0.22.1"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
