[package]
name = "iapping"
description = "IAP-Proxy for testing auth"
authors = ["Laco Papay <lacop@lacop.net>"]
version = "0.0.1"
license = "MIT"
repository = "https://github.com/lacop/iapping"
readme = "README.md"
keywords = ["iap", "proxy", "gcp", "authentication", "jwt"]
categories = ["authentication", "development-tools"]
edition = "2024"

exclude = [
    ".github/*",
    "demo/*",
]

[dependencies]
anyhow = "1.0.102"
aws-lc-rs = "1.16.2"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlparse = "0.7.3"
